--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^1.2.3",
+    "emoji-picker-react": "^4.4.7",
     "history": "^4.9.0",
     "ionicons": "^6.0.3",
     "query-string": "^8.1.0",
