--- a/.github/workflows/main.dev.yml
+++ b/.github/workflows/main.dev.yml
@@ -3,46 +3,47 @@ on:
   push:
     branches:
       - dev
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v1
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
 
-#       - uses: actions/setup-node@v3
-#         with:
-#           node-version: 16
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
 
-#       - name: Configure AWS Credentials
-#         uses: aws-actions/configure-aws-credentials@v1
-#         with:
-#           aws-access-key-id: ${{ secrets.AWS_GITHUB_S3_PUSHER_ACCESS_KEY_ID }}
-#           aws-secret-access-key: ${{ secrets.AWS_GITHUB_S3_PUSHER_SECRET_ACCESS_KEY }}
-#           aws-region: us-east-2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
 
-#       - uses: dkershner6/aws-ssm-getparameters-action@v1
-#         with:
-#           parameterPairs: '/dev/deploy/storybook/env = ENV'
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_GITHUB_S3_PUSHER_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_GITHUB_S3_PUSHER_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
 
-#       - name: save env to .env
-#         run: |
-#           cat << EOF > .env
-#           ${{ env.ENV }}
-#           EOF
+      - uses: dkershner6/aws-ssm-getparameters-action@v1
+        with:
+          parameterPairs: '/dev/deploy/crowdbible/env = ENV'
 
-#       - name: Load .env file
-#         uses: xom9ikk/dotenv@v2
+      - name: store env
+        run: |
+          cat << EOF > .env
+          ${{ env.ENV }}
+          EOF
 
-#       - name: npm ci --force
-#         run: npm ci --force
+      - name: Load env
+        uses: xom9ikk/dotenv@v2
 
-#       - name: Build
-#         run: npm run build-storybook
+      - name: npm ci --force
+        run: npm ci --force
 
-#       - uses: TimekillerTK/s3-sync-action@master
-#         with:
-#           args: --follow-symlinks --delete
-#         env:
-#           SOURCE_DIR: 'storybook-static'
+      - name: npm run build
+        run: npm run build
+
+      - uses: TimekillerTK/s3-sync-action@master
+        with:
+          args: --follow-symlinks --delete
+        env:
+          SOURCE_DIR: 'build'
