--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crowd.Bible",
+  "name": "crowd-bible",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
@@ -8,31 +8,40 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
-    "@eten-lab/ui-kit": "^0.3.13",
+    "@eten-lab/discussion-box": "^0.2.8",
+    "@eten-lab/ui-kit": "^0.3.28",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
-    "@types/node": "^12.19.15",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
-    "axios": "^1.2.3",
+    "@types/sql.js": "^1.4.4",
+    "axios": "^1.3.4",
+    "bl": "^0.9.0",
     "emoji-picker-react": "^4.4.7",
     "formik": "^2.2.9",
     "history": "^4.9.0",
     "ionicons": "^6.0.3",
+    "localforage": "^1.10.0",
+    "nanoid": "^4.0.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
+    "reflect-metadata": "^0.1.13",
+    "sql.js": "^1.8.0",
     "swiper": "^8.4.6",
+    "ts-invariant": "^0.10.3",
+    "typeorm": "^0.3.12",
     "typescript": "^4.1.3",
+    "util": "^0.12.5",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -49,10 +58,12 @@
     "yup": "^1.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "test": "react-app-rewired test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
+    "eject": "react-app-rewired eject",
+    "ionic:serve": "react-app-rewired start"
   },
   "eslintConfig": {
     "extends": [
@@ -62,9 +73,12 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "Chrome >=60",
+      "ChromeAndroid >=60",
+      "Firefox >=63",
+      "Edge >=79",
+      "Safari >=13",
+      "iOS >=13"
     ],
     "development": [
       "last 1 chrome version",
@@ -73,7 +87,19 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "4.6.1"
+    "@capacitor/cli": "4.6.1",
+    "@types/node": "^18.14.6",
+    "browserify-fs": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "prettier": "^2.8.4",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
   },
   "description": "Crowd Sourcing Translation"
 }
