fix error related to typeorm and add svg-translation page

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
-    "@eten-lab/discussion-box": "^0.2.8",
-    "@eten-lab/ui-kit": "^0.3.28",
+    "@eten-lab/discussion-box": "^0.2.9",
+    "@eten-lab/ui-kit": "^0.3.29",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.9",
@@ -23,7 +23,6 @@
     "@types/sql.js": "^1.4.4",
     "axios": "^1.3.4",
     "bl": "^0.9.0",
-    "emoji-picker-react": "^4.4.7",
     "formik": "^2.2.9",
     "history": "^4.9.0",
     "ionicons": "^6.0.3",
@@ -34,7 +33,8 @@
     "react-dom": "^18.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^5.0.1",
+    "react-native-sqlite-storage": "file:./shims/react-native-sqlite-storage",
     "reflect-metadata": "^0.1.13",
     "sql.js": "^1.8.0",
     "swiper": "^8.4.6",
