--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-scripts": "^5.0.0",
     "reflect-metadata": "^0.1.13",
     "sql.js": "^1.8.0",
+    "svgson": "^5.2.1",
     "swiper": "^8.4.6",
     "ts-invariant": "^0.10.3",
     "typeorm": "^0.3.12",
