--- a/package.json
+++ b/package.json
@@ -62,9 +62,11 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "format": "prettier --write \"src/**/*.ts\"",
+    "precommit": "lint-staged",
     "test": "react-app-rewired test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
     "eject": "react-app-rewired eject",
-    "ionic:serve": "react-app-rewired start"
+    "ionic:serve": "react-app-rewired start",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -93,6 +95,8 @@
     "browserify-fs": "^1.0.0",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "prettier": "^2.8.4",
@@ -102,5 +106,10 @@
     "stream-http": "^3.2.0",
     "url": "^0.11.0"
   },
-  "description": "Crowd Sourcing Translation"
+  "description": "Crowd Sourcing Translation",
+  "lint-staged": {
+    "**/*.{ts,tsx,md,mdx,js,jsx}": [
+      "npm run format"
+    ]
+  }
 }
