feat:add svg panning and pinching

--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native-sqlite-storage": "file:./shims/react-native-sqlite-storage",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
-    "react-native-sqlite-storage": "file:./shims/react-native-sqlite-storage",
+    "react-zoom-pan-pinch": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "sql.js": "^1.8.0",
     "svgson": "^5.2.1",
