--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nanoid": "^4.0.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-native-sqlite-storage": "file:./shims/react-native-sqlite-storage",
     "react-router": "^5.2.0",
