Add .vscode settings.json

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-REACT_APP_DISCUSSION_SUBSCRIPTION_WS_API=ws://localhost:8212/graphql
-REACT_APP_DISCUSSION_SUBSCRIPTION_API=http://localhost:8212/graphql
-REACT_APP_DISCUSSION_API=http://localhost:8202/graphql
-REACT_APP_FILE_API=http://localhost:8203/graphql
+REACT_APP_DISCUSSION_SUBSCRIPTION_WS_API=ws://discussion-sub-api.dev.lab.eten.bible/graphql
+REACT_APP_DISCUSSION_SUBSCRIPTION_API=https://discussion-sub-api.dev.lab.eten.bible/graphql
+REACT_APP_DISCUSSION_API=https://discussion-api.dev.lab.eten.bible/graphql
+REACT_APP_FILE_API=https://file-api.dev.lab.eten.bible/graphql
 REACT_APP_AGGREGATION_API=http://localhost:8206/grapqhl
 REACT_APP_GRAPHQL_MODE=independant #aggregation # independant
 REACT_APP_MAX_FILE_SIZE=1000000000
 
 REACT_APP_CPG_SERVER_URL=http://localhost:8201
+
