Resolve conflict & recover absolute paths

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-zoom-pan-pinch": "^3.0.2",
+    "react-native-sqlite-storage": "file:./shims/react-native-sqlite-storage",
     "reflect-metadata": "^0.1.13",
     "sql.js": "^1.8.0",
     "svgson": "^5.2.1",
