--- a/.github/workflows/main.dev.yml
+++ b/.github/workflows/main.dev.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Load env
         uses: xom9ikk/dotenv@v2
 
+      - name: npm install
+        run: npm install
+
       - name: npm ci --force
         run: npm ci --force
 
