--- a/package.json
+++ b/package.json
@@ -31,14 +31,16 @@
     "nanoid": "^4.0.1",
     "qs": "^6.11.1",
     "query-string": "^8.1.0",
+    "re-resizable": "^6.9.9",
     "react": "^18.2.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
+    "react-native-sqlite-storage": "file:./shims/react-native-sqlite-storage",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-zoom-pan-pinch": "^3.0.2",
-    "react-native-sqlite-storage": "file:./shims/react-native-sqlite-storage",
     "reflect-metadata": "^0.1.13",
     "sql.js": "^1.8.0",
     "svgson": "^5.2.1",
