--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "react-simple-code-editor": "^0.13.1",
     "react-zoom-pan-pinch": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "sql.js": "^1.8.0",
