--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,6 +4,7 @@
     "paths": {
       "@/src/*": ["src/*"],
       "@/components/*": ["src/components/*"],
+      "@/constants/*": ["src/constants/*"],
       "@/hooks/*": ["src/hooks/*"],
       "@/models/*": ["src/models/*"],
       "@/pages/*": ["src/pages/*"],
