--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
     "@eten-lab/discussion-box": "^0.2.9",
-    "@eten-lab/ui-kit": "^0.3.52",
+    "@eten-lab/ui-kit": "^0.3.62",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
     "@jest/globals": "^29.5.0",
@@ -110,6 +110,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "fake-indexeddb": "^4.0.1",
     "https-browserify": "^1.0.0",
     "husky": "^8.0.0",
