--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,8 +5,10 @@
       "@/src/*": ["src/*"],
       "@/components/*": ["src/components/*"],
       "@/constants/*": ["src/constants/*"],
+      "@/dtos/*": ["src/dtos/*"],
       "@/hooks/*": ["src/hooks/*"],
       "@/models/*": ["src/models/*"],
+      "@/mappers/*": ["src/mappers/*"],
       "@/pages/*": ["src/pages/*"],
       "@/reducers/*": ["src/reducers/*"],
       "@/repositories/*": ["src/repositories/*"],
