--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ REACT_APP_GRAPHQL_MODE=independant #aggregation # independant
 REACT_APP_MAX_FILE_SIZE=1000000000
 
 REACT_APP_CPG_SERVER_URL=http://localhost:8201
-
+REACT_APP_KEYCLOAK_URL=http://localhost:8080
