--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.3.3",
     "@types/sql.js": "^1.4.4",
+    "apollo-upload-client": "^17.0.0",
     "axios": "^1.3.4",
     "bl": "^0.9.0",
     "formik": "^2.2.9",
@@ -100,6 +101,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "4.6.1",
+    "@types/apollo-upload-client": "^17.0.2",
     "@types/node": "^18.14.6",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "browserify-fs": "^1.0.0",
