--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
-    "@eten-lab/models": "^1.3.5",
-    "@eten-lab/ui-kit": "^0.5.8",
+    "@eten-lab/models": "^1.3.7",
+    "@eten-lab/ui-kit": "^0.5.12",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
     "@jest/globals": "^29.5.0",
@@ -30,6 +30,7 @@
     "graphql": "^16.6.0",
     "history": "^4.9.0",
     "ionicons": "^6.0.3",
+    "language-tags": "^1.0.8",
     "localforage": "^1.10.0",
     "nanoid": "^4.0.1",
     "qs": "^6.11.1",
@@ -103,6 +104,7 @@
   "devDependencies": {
     "@capacitor/cli": "4.6.1",
     "@types/apollo-upload-client": "^17.0.2",
+    "@types/language-tags": "^1.0.1",
     "@types/node": "^18.14.6",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "browserify-fs": "^1.0.0",
