--- a/package.json
+++ b/package.json
@@ -135,7 +135,8 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "description": "Crowd Sourcing Translation",
   "lint-staged": {
