fix: try to turn off treating warnings as errors

--- a/.github/workflows/main.dev.yml
+++ b/.github/workflows/main.dev.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           cat << EOF > .env
           ${{ env.ENV }}
+          CI=false
           EOF
 
       - name: Load env
