--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
     "@eten-lab/models": "^1.2.11",
+    "@eten-lab/sso": "^0.1.6",
     "@eten-lab/ui-kit": "^0.3.86",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
