UI Tests setup using Playwright and pushed sample test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,6 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
-  "include": ["src", "../models/src/models/site-text"]
+  "include": ["src", "../models/src/models/site-text", "test"]
+
 }
