--- a/.github/workflows/playwrite.dev.yml
+++ b/.github/workflows/playwrite.dev.yml
@@ -44,6 +44,9 @@ jobs:
       - name: npm ci --force
         run: npm ci --force
       
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+        
       - name: Start React app
         run: |
           npm start &
