--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@eten-lab/ui-kit": "^0.5.26",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
-    "@jest/globals": "^29.5.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^12.6.3",
@@ -78,7 +77,7 @@
     "build": "react-app-rewired build",
     "format": "prettier --write \"src/**/*.{ts,tsx,md,mdx,js,jsx}\"",
     "precommit": "lint-staged",
-    "test": "react-app-rewired test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons|swiper|swiper/css|swiper/react|ssr-window|dom7|@etan-lab/ui-kit|@fontsource|react-quill|nanoid|axios))'",
+    "test": "react-app-rewired test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons|swiper|swiper/css|swiper/react|ssr-window|dom7|@etan-lab/ui-kit|@fontsource|react-quill|nanoid|axios|react-markdown|vfile|vfile-message|unist-.*|unified|bail|is-plain-obj|trough|remark-.*|mdast-util-.*|micromark.*|decode-named-character-reference|character-entities|property-information|hast-util-whitespace|space-separated-tokens|comma-separated-tokens|pretty-bytes|trim-lines))'",
     "eject": "react-app-rewired eject",
     "ionic:serve": "react-app-rewired start",
     "prepare": "husky install",
@@ -107,6 +106,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "4.6.1",
+    "@jest/globals": "^29.5.0",
     "@playwright/test": "^1.33.0",
     "@types/apollo-upload-client": "^17.0.2",
     "@types/language-tags": "^1.0.1",
