--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,9 @@ yarn-error.log*
 
 # Optional eslint cache
 .eslintcache
+
 .env
 /test-results/
 /playwright-report/
 /playwright/.cache/
+test.db
