feat: setup logger adapter and roarr as logger

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,11 @@ REACT_APP_KEYCLOAK_URL=http://localhost:8080
 REACT_APP_KEYCLOAK_REALM=
 REACT_APP_KEYCLOAK_CLIENT_ID=
 REACT_APP_KEYCLOAK_CLIENT_SECRET=
+
+REACT_APP_LOGLEVEL=10
+#trace 10
+#debug 20
+#info 30
+#warn 40
+#error 50
+#fatal 60
