--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-simple-code-editor": "^0.13.1",
     "react-zoom-pan-pinch": "^3.0.2",
     "reflect-metadata": "^0.1.13",
+    "roarr": "^7.15.0",
     "sql.js": "^1.8.0",
     "svgson": "^5.2.1",
     "swiper": "^8.4.6",
