--- a/.env.example
+++ b/.env.example
@@ -12,10 +12,13 @@ REACT_APP_KEYCLOAK_REALM=
 REACT_APP_KEYCLOAK_CLIENT_ID=
 REACT_APP_KEYCLOAK_CLIENT_SECRET=
 
-REACT_APP_LOGLEVEL=10
+
+#REACT_APP_LOGLEVEL=60
 #trace 10
 #debug 20
 #info 30
 #warn 40
 #error 50
-#fatal 60
+#fatal 60 #Default
+
+REACT_APP_LOGTRACEALL=FALSE
