--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@capacitor/status-bar": "4.1.1",
     "@eten-lab/models": "^1.3.10",
     "@eten-lab/sso": "^0.1.6",
-    "@eten-lab/ui-kit": "^0.5.26",
+    "@eten-lab/ui-kit": "^0.5.31",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
+    "@mui/material": "^5.13.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^12.6.3",
