--- a/.github/workflows/main.dev.yml
+++ b/.github/workflows/main.dev.yml
@@ -38,11 +38,8 @@ jobs:
       - name: Load env
         uses: xom9ikk/dotenv@v2
 
-      - name: npm i --force
-        run: npm i --force
-
-      # - name: npm ci --force
-      #   run: npm ci --force
+      - name: npm ci --force
+        run: npm ci --force
 
       - name: npm run build
         run: npm run build
