--- a/.github/workflows/main.dev.yml
+++ b/.github/workflows/main.dev.yml
@@ -38,18 +38,11 @@ jobs:
       - name: Load env
         uses: xom9ikk/dotenv@v2
 
-      - name: Install dependencies
-        run: |
-          if [ -e yarn.lock ]; then
-          yarn install --frozen-lockfile
-          elif [ -e package-lock.json ]; then
-          npm ci
-          else
-          npm i
-          fi
+      - name: npm i --force
+        run: npm i --force
 
-      # - name: npm ci --force
-      #   run: npm ci --force
+      - name: npm ci --force
+        run: npm ci --force
 
       - name: npm run build
         run: npm run build
