--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
+    "@eten-lab/core": "^0.2.11",
     "@eten-lab/models": "^1.3.11",
     "@eten-lab/sso": "^0.1.6",
     "@eten-lab/ui-kit": "^0.5.38",
