create ci workflow for testing

--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "build": "react-app-rewired build",
     "format": "prettier --write \"src/**/*.{ts,tsx,md,mdx,js,jsx}\"",
     "precommit": "lint-staged",
-    "test": "react-app-rewired test --transformIgnorePatterns 'none'",
+    "test": "react-app-rewired test --transformIgnorePatterns 'none' --watchAll",
     "eject": "react-app-rewired eject",
     "ionic:serve": "react-app-rewired start",
     "prepare": "husky install",
