--- a/.github/workflows/test.dev.yml
+++ b/.github/workflows/test.dev.yml
@@ -1,7 +1,7 @@
-name: CI Workflow
+name: Pre-Test Workflow
 on:
   pull_request:
-    branches: [dev-test]
+    branches: [dev]
     types: [opened, synchronize, reopened]
 
 jobs:
