--- a/package.json
+++ b/package.json
@@ -112,6 +112,8 @@
   },
   "devDependencies": {
     "@capacitor/cli": "4.6.1",
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
     "@jest/globals": "^29.5.0",
     "@playwright/test": "^1.33.0",
     "@types/apollo-upload-client": "^17.0.2",
@@ -150,6 +152,9 @@
     "workbox-webpack-plugin": "^6.5.4"
   },
   "description": "Crowd Sourcing Translation",
+  "commitlint": {
+    "extends": ["@commitlint/config-conventional"]
+  },
   "lint-staged": {
     "**/*.{ts,tsx,md,mdx,js,jsx}": [
       "npm run format",
