--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^26.0.24",
     "@types/jszip": "^3.4.1",
     "@types/react": "^18.0.17",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.6",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.3.3",
@@ -45,6 +46,7 @@
     "query-string": "^8.1.0",
     "re-resizable": "^6.9.9",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
