--- a/.github/workflows/test.dev.yml
+++ b/.github/workflows/test.dev.yml
@@ -3,6 +3,8 @@ on:
   pull_request:
     branches: [dev]
     types: [opened, synchronize, reopened]
+  push:
+    branches: [RegistrationTests]
 
 jobs:
   docker-env-test:
