--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
 	},
 	"eslint.enable": true,
 	"eslint.format.enable": true,
-	"editor.formatOnSave": false
+	"editor.formatOnSave": false,
+	"javascript.preferences.importModuleSpecifier": "non-relative"
 }
