--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "apollo-upload-client": "^17.0.0",
     "axios": "^1.3.4",
     "bl": "^0.9.0",
+    "bson": "^5.3.0",
     "formik": "^2.2.9",
     "graphql": "^16.6.0",
     "history": "^4.9.0",
