feat(map-translation): fix bugs and some performance optimisation
Fix bugs when same words are created, including when parsing same maps
Now if the same word found, it just become related to both (or more) maps
Several methods changed: thowed off some checks to speed them
up
Several methods refactored to use core methods which use raw sqls

--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@capacitor/cli": "4.6.1",
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
