chore: resolve conlict

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,5 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
-  "include": ["src", "../models/src/models/site-text", "tests", "playwright.config.ts"]
-
+  "include": ["src", "tests", "playwright.config.ts"]
 }
