--- a/package.json
+++ b/package.json
@@ -91,7 +91,9 @@
     "eject": "react-app-rewired eject",
     "ionic:serve": "react-app-rewired start",
     "prepare": "husky install",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx,md,mdx,js,jsx}\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx,md,mdx,js,jsx}\" --fix",
+    "generate-build-version": "node generate-build-version",
+    "prebuild": "npm run generate-build-version"
   },
   "eslintConfig": {
     "extends": [
