--- a/.github/workflows/ci.test.yml
+++ b/.github/workflows/ci.test.yml
@@ -1,7 +1,7 @@
 name: CI Workflow
 on:
   pull_request:
-    branches: [test]
+    branches: [test/cache-busting]
     types: [opened, synchronize, reopened]
 
 jobs:
