--- a/.github/workflows/ci.test.yml
+++ b/.github/workflows/ci.test.yml
@@ -47,8 +47,8 @@ jobs:
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           git commit -a -m "Bump version to ${{ steps.increase_version.outputs.new_version }}"
           
-      - name: npm ci --force
-        run: npm ci --force
+      # - name: npm ci --force
+      #   run: npm ci --force
 
-      - name: npm run build
-        run: npm run build
+      # - name: npm run build
+      #   run: npm run build
