--- a/.github/workflows/ci.test.yml
+++ b/.github/workflows/ci.test.yml
@@ -39,12 +39,13 @@ jobs:
         uses: xom9ikk/dotenv@v2
 
       - name: Increase package.json version
-        run: npm version patch
-
-      - name: Commit changes
         run: |
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
+          npm version patch
+
+      - name: Commit changes
+        run: |
           git commit -a -m "Bump version to ${{ steps.increase_version.outputs.new_version }}"
           
       # - name: npm ci --force
