--- a/.github/workflows/ci.test.yml
+++ b/.github/workflows/ci.test.yml
@@ -2,7 +2,7 @@ name: CI Workflow
 on:
   pull_request:
     branches: [test/cache-busting]
-    types: [opened, synchronize, reopened]
+    types: [closed]
 
 jobs:
   deploy:
