fix(cache-busting): add head ref

--- a/.github/workflows/ci.test.yml
+++ b/.github/workflows/ci.test.yml
@@ -9,8 +9,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.head_ref }}
+          fetch-depth: 0
+
 
       - uses: actions/setup-node@v3
         with:
@@ -57,12 +60,13 @@ jobs:
           git status
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          
+          branch: ${{ github.head_ref }}
+
       # - name: npm ci --force
       #   run: npm ci --force
 
