--- a/.github/workflows/ci.test.yml
+++ b/.github/workflows/ci.test.yml
@@ -42,8 +42,8 @@ jobs:
       
       - name: Configure Git
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
 
       - name: Auto versioning
         run: |
