--- a/.github/workflows/ci.test.yml
+++ b/.github/workflows/ci.test.yml
@@ -58,5 +58,5 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
           branch: ${{ github.ref }}
