--- a/.github/workflows/ci.test.yml
+++ b/.github/workflows/ci.test.yml
@@ -53,7 +53,7 @@ jobs:
           echo "hello"
           echo "head refs:  ${{ github.ref }}"
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
 
       - name: Push changes
         uses: ad-m/github-push-action@master
