--- a/.github/workflows/ci.test.yml
+++ b/.github/workflows/ci.test.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
-
+          token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
 
       - uses: actions/setup-node@v3
         with:
