--- a/.github/workflows/ci.test.yml
+++ b/.github/workflows/ci.test.yml
@@ -12,6 +12,7 @@ jobs:
         uses: 'actions/checkout@v2'
         with:
           ref: ${{ github.ref }}
+          token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
       - name: 'cat package.json'
         run: cat ./package.json
       - name: 'Automated Version Bump'
