Test/cache busting (#126)
* 0.0.2

* feat(cache-busting): wip

* fix(eslint): eslint

* feat(cache-busting): indexeddb, localstorage, cache

* fix(cache-busting): add test flow

* fix(cache-busting): test commit

* fix(cache-busting): change ci branch

* fix(cache-busting): change versioning

* fix(cache-busting): block building

* fix(cache-busting): commit user config

* fix(cache-busting): fix to output new version

* fix(cache-busting): pull reqest type change

* fix(cache-busting): add missing run

* fix(cache-busting): trigger ci flow

* fix(cache-busting): use plugin

* fix(cache-busting): trigger

* fix(cache-busting): changes

* fix(cache-busting): trigger

* fix(cache-busting): git status

* fix(cache-busting): remove committing

* fix(cache-busting): add head ref

* 0.0.2

* fix(cache-busting): check refs

* fix(cache-busting): trigger

* 0.0.3

* 0.0.4

* fix(cache-busting): base ref check

* fix(cache-busting): trigger

* 0.0.5

* fix(cache-busting): echo check

* fix(cache-busting): trigger 6

* 0.0.6

* fix(cache-busting): echo checks

* fix(cache-busting): trigger 7

* 0.0.7

* fix(cache-busting): test on push events

* fix(cache-busting): push to pull request target branch

* fix(cache-busting): trigger 8

* fix(cache-busting): auto versioning

* fix(cache-busting): change ref

* fix(cache-busting): change ref

* 0.0.9

* fix(cache-busting): change committer

* fix(cache-busting): trigger 10

* fix(cache-bursting): change github token

* Update ci.test.yml

change github token

* 0.0.10

* fix(cache-busting): use release draft

* fix(cache-busting): add release-drafter file

* fix(cache-busting): revert

* fix(cache-busting): change checkout token

* 0.0.11

* 0.0.12

* 0.0.13

* 0.0.14

* 0.0.15

* 0.0.16

* 0.0.17

* 0.0.18

* 0.0.19

* 0.0.20

* 0.0.21

* 0.0.22

* 0.0.23

* 0.0.24

* 0.0.25

* 0.0.26

* 0.0.27


--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crowd-bible",
-  "version": "0.0.1",
+  "version": "0.0.37",
   "private": true,
   "devServer": {
     "historyApiFallback": true
@@ -91,7 +91,9 @@
     "eject": "react-app-rewired eject",
     "ionic:serve": "react-app-rewired start",
     "prepare": "husky install",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx,md,mdx,js,jsx}\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx,md,mdx,js,jsx}\" --fix",
+    "generate-build-version": "node generate-build-version",
+    "prebuild": "npm run generate-build-version"
   },
   "eslintConfig": {
     "extends": [
