--- a/.github/workflows/ci.dev.yml
+++ b/.github/workflows/ci.dev.yml
@@ -1,21 +1,34 @@
 name: CI Workflow
 on:
-  pull_request:
+  push:
     branches: [dev]
-    types: [closed]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
+      - name: 'Checkout source code'
+        uses: 'actions/checkout@v2'
+        with:
+          token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+
+      - name: 'Automated Version Bump'
+        id: version-bump
+        uses: 'phips28/gh-action-bump-version@master'
+        with:
+          tag-prefix: 'v'
+        env:
+          GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+
+      - name: 'Output Step'
+        env:
+          NEW_TAG: ${{ steps.version-bump.outputs.newTag }}
+        run: echo "new tag $NEW_TAG"
 
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -37,7 +50,7 @@ jobs:
 
       - name: Load env
         uses: xom9ikk/dotenv@v2
-
+          
       - name: npm ci --force
         run: npm ci --force
 
