--- a/package.json
+++ b/package.json
@@ -166,8 +166,10 @@
   },
   "lint-staged": {
     "**/*.{ts,tsx,md,mdx,js,jsx}": [
-      "npm run format",
-      "npx eslint --fix --cache"
+      "prettier --write",
+      "git add",
+      "eslint --fix --cache",
+      "git add"
     ]
   }
 }
