--- a/package.json
+++ b/package.json
@@ -168,7 +168,7 @@
     "**/*.{ts,tsx,md,mdx,js,jsx}": [
       "prettier --write",
       "git add",
-      "eslint --fix --cache",
+      "eslint --cache --fix",
       "git add"
     ]
   }
